# jentic-openapi-tools

./: .gitignore  .gitmessage  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  NOTICE  README.md  SECURITY.md  SUPPORT.md  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml
.github/scripts/: sync-versions.py
.github/workflows/: ci.yml  dependabot-auto-merge.yml  pre-release.yml  release.yml
docs/: harness-verification.md
jentic-openapi-common/: README.md  pyproject.toml
jentic-openapi-common/src/jentic_openapi_common/: __init__.py
src/jentic_openapi_tools/: __init__.py
templates/: CHANGELOG.md.j2
